--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping site</title>
 
-    <link rel="stylesheet" href="/blogStyles/mainBlog.css"/>
+    <link rel="stylesheet" href="blogStyles/mainBlog.css"/>
 </head>
 <body>
  <section>
@@ -48,6 +48,7 @@
 
 
 
-<script src="/blogScripts/mainBlog.js" type="module"></script> 
+<script src="blogScripts/mainBlog.js" type="module"></script> 
 </body>
+
 </html>
