--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
 
-  <div id="searchDiv">2
+  <div id="searchDiv">
   <input type="search" id="search" placeholder="I'm looking for..."/>
   <img src="photos/searchIcon.png" id="searchIma"/>
 </div>
@@ -52,3 +52,4 @@
 </body>
 
 </html>
+
